umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_15-crown-5.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "O#n2#v2" "1" "C#h2#v2" "2" "C#h2#v2" "3" "O#n2#v2" "4" "C#h2#v2" "5" "C#h2#v2" "6" "O#n2#v2" "7" "C#h2#v2" "8" "C#h2#v2" "9" "O#n2#v2" "10" "C#h2#v2" "11" "C#h2#v2" "12" "O#n2#v2" "13" "C#h2#v2" "14" "C#h2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "5" "1"] ["5" "6" "1"] ["6" "7" "1"] ["7" "8" "1"] ["8" "9" "1"] ["9" "10" "1"] ["10" "11" "1"] ["11" "12" "1"] ["12" "13" "1"] ["13" "14" "1"] ["14" "0" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "O#n2#v2" "1" "C#h2#v2" "2" "C#h2#v2" "3" "O#n2#v2" "4" "C#h2#v2" "5" "C#h2#v2" "6" "O#n2#v2" "7" "C#h2#v2" "8" "C#h2#v2" "9" "O#n2#v2" "10" "C#h2#v2" "11" "C#h2#v2" "12" "O#n2#v2" "13" "C#h2#v2" "14" "C#h2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "5" "1"] ["5" "6" "1"] ["6" "7" "1"] ["7" "8" "1"] ["8" "9" "1"] ["9" "10" "1"] ["10" "11" "1"] ["11" "12" "1"] ["12" "13" "1"] ["13" "14" "1"] ["14" "0" "1"]] :charge 0 :spin "#u0 #s1"}}}
