umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_18-crown-6.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 18
    bond_count: 18
    topology: Qo??_?A??O?C?A?A?C?OA?_OOaW
    atoms:
      - "O#n2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
      - "O#n2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
      - "O#n2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 18
    bond_count: 18
    topology: Qo??_?A??O?C?A?A?C?OA?_OOaW
    atoms:
      - "O#n2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
      - "O#n2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
      - "O#n2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
