umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_2-oxazolidone.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: Eob_
    atoms:
      - "{O/2v2}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{CH2v2}"
      - "{N/1H1v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: Eob_
    atoms:
      - "{O/2v2}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{CH2v2}"
      - "{N/1H1v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
