umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_2-pyrazoline.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 5
    topology: DpK
    atoms:
      - "N#h#n#v2"
      - "N#n#v3"
      - "C#h2#v2"
      - "C#h#v3"
      - "C#h2#v2"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 5
    topology: DpK
    atoms:
      - "N#h#n#v2"
      - "N#n#v3"
      - "C#h2#v2"
      - "C#h#v3"
      - "C#h2#v2"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
      - "-"
