umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_2H-azirine.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 3
    topology: Bw
    atoms:
      - "{CH2v2}"
      - "{CH1v3}"
      - "{N/1v3}"
    bonds:
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 3
    topology: Bw
    atoms:
      - "{CH2v2}"
      - "{CH1v3}"
      - "{N/1v3}"
    bonds:
      - "-"
      - "-"
      - "="
