umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_2H-oxete.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Cr
    atoms:
      - "C#h2#v2"
      - "C#h#v3"
      - "O#n2#v2"
      - "C#h#v3"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Cr
    atoms:
      - "C#h2#v2"
      - "C#h#v3"
      - "O#n2#v2"
      - "C#h#v3"
    bonds:
      - "-"
      - "-"
      - "="
      - "-"
